fixing alignment of article info leading item blog

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -7,6 +7,9 @@
 			}
 		}
 	}
+	.article-info-inner {
+		bottom: 15px;
+	}
 }
 @media (max-width: 979px) and (min-width: 768px) {
 
