--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2417,7 +2417,7 @@ legend {
 }
 
 .article-info-inner {
-	bottom: 10px;
+	bottom: 32px;
 	position: absolute;
 	right: 0;
 	width: 47.6%;
